toolchain/internal/core/analysis/testdata/errors/types/undefined_in_map.vdl
// @expect: E201

type User {
  profiles: map<Profile>
}
